# awesome-assert

./: .clang-tidy  .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  flake.nix
.github/workflows/: flake.yml
include/awesome/: assert.hpp
include/awesome/assert/: format-helpers.hpp
src/: assert.cpp  format-helpers.cpp
test/: simple.cpp
